2012-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-login): Set connection property "login-as".

	* tramp-cache.el (tramp-dump-connection-properties): Do not dumb
	properties, when "login-as" is set.

	* tramp-sh.el (tramp-methods): Add user spec to "pscp" and "psftp".
	(tramp-default-user-alist): Don't add "pscp".
	(tramp-do-copy-or-rename-file-out-of-band): Use connection
	property "login-as", if set.  (Bug#10530)

2012-01-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-default-user-alist): Don't add "plink",
	"plink1" and "psftp".  (Bug#10530)

2012-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods, tramp-rsh-end-of-line): Remove
	`tramp-password-end-of-line' from docstring.
	(tramp-default-password-end-of-line): Remove defcustom.
	(tramp-local-end-of-line): New defcustom.
	(tramp-action-login, tramp-action-password, tramp-action-yesno)
	(tramp-action-yn, tramp-action-terminal): Use it.  (Bug#10530)

	* tramp-sh.el (tramp-methods): Do not use `tramp-password-end-of-line'.

2012-01-15  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.4 released.

	* tramp-sh.el (tramp-remote-path): Set tramp-autoload cookie.

2012-01-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add "/opt/bin" and "/opt/sbin".
	(tramp-find-shell): Rearrange implementation.
	(tramp-find-inline-compress): Cache the compress commands in the
	process cache.
	(tramp-get-inline-compress): Read connection properties from the
	process cache.

2011-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Move check for busybox ...
	(tramp-find-shell): ... here.  Simplify implementation.
	(tramp-remote-coding-commands): Make the test command an extra slot.
	(tramp-find-inline-encoding): Cache the coding commands in the
	process cache.  Apply test command on the remote side, if defined.